Load phim từ database lên trang đang chiếu và trang sắp chiếu, thêm cột trạng thái cho bảng phim

--- a/src/public/css/now_showing.css
+++ b/src/public/css/now_showing.css
@@ -64,6 +64,10 @@
     opacity: 1;
 }
 
+.movie-image {
+    width: 100%;
+}
+
 .image-container:hover .movie-image {
     filter: brightness(35%);
     transition: 0.2s;
