--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -58,8 +58,8 @@
                         PHIM
                     </a>
                     <ul class="dropdown-menu" style="background-color: black;">
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">PHIM ĐANG CHIẾU</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">PHIM SẮP CHIẾU</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="phim-dang-chieu">PHIM ĐANG CHIẾU</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="phim-sap-chieu">PHIM SẮP CHIẾU</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown menu">
