--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -71,8 +71,8 @@
                         <li><a class="dropdown-item menu" style="color: white;" href="#">THỂ LOẠI PHIM</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="#">DIỄN VIÊN</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="#">ĐẠO DIỄN</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">BÌNH LUẬN PHIM</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">BLOG ĐIỆN ẢNH</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="binh-luan-phim">BÌNH LUẬN PHIM</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="blog-dien-anh">BLOG ĐIỆN ẢNH</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown menu">
