--- a/src/resource/views/movie_blog.hbs
+++ b/src/resource/views/movie_blog.hbs
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="movie_blog.css">
+    <link rel="stylesheet" href="/css/movie_blog.css">
     <title>Blog điện ảnh</title>
 </head>
 
@@ -25,77 +25,32 @@
                     </a>
                 </div>
                 
+                {{#each blogs}}
                 <div class="movie-item">
                     <div class="row">
-                        <div class="movie-image">
+                        <div class="movie-image col-md-3">
                             <a href="#">
-                                <img src="https://cdn.galaxycine.vn/media/2023/1/8/450_1673155628245.jpg">
+                                <img src="{{this.hinhanh}}">
                             </a>
                         </div>
-                        <div class="movie-info">
+                        <div class="movie-info col-md-8">
                             <div class="movie-name">
-                                <a href="#"><h5>Ký Sự Điện Ảnh - Kỳ 21: Phiếm Phim Đầu Năm, "Fun" Cả Năm</h5></a>
+                                <a href="#"><h5>{{this.tieude}}</h5></a>
                             </div>
                             <div class="movie-detail">
-                                <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">0</label></button>
-                                <label class="movie-views-lbl">Lượt xem: <label id = "count-view">0</label></label>
+                                <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">{{this.luotdanhgia}}</label></button>
+                                <label class="movie-views-lbl">Lượt xem: <label id = "count-view">{{this.luotxem}}</label></label>
                             </div>
                             <div class = "movie-description">
                                 <p>
-                                    Nhìn lại bức tranh điện ảnh của cả năm 2022 có gì đáng nhớ!
+                                    {{this.noidung}}
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="movie-item">
-                    <div class="row">
-                        <div class="movie-image">
-                            <a href="#">
-                                <img src="https://cdn.galaxycine.vn/media/2023/2/21/boc-trung-phuc-sinh-ant-man-and-the-wasp-quantumania-6_1676952634061.jpg">
-                            </a>
-                        </div>
-                        <div class="movie-info">
-                            <div class="movie-name">
-                                <a href="#"><h5>Bóc Trứng Phục Sinh Ant-Man And The Wasp: Quantumania</h5></a>
-                            </div>
-                            <div class="movie-detail">
-                                <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">0</label></button>
-                                <label class="movie-views-lbl">Lượt xem: <label id = "count-view">0</label></label>
-                            </div>
-                            <div class = "movie-description">
-                                <p>
-                                    Những bộ phim thuộc vũ trụ điện ảnh Marvel luôn “chôn” rất nhiều Trứng Phục Sinh để các fan trung thành khám phá.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="movie-item">
-                    <div class="row">
-                        <div class="movie-image">
-                            <a href="#">
-                                <img src="https://cdn.galaxycine.vn/media/2023/2/14/fast-x--vin-diesel-ru-dan-sieu-anh-hung-dua-xe-6_1676348176123.jpg">
-                            </a>
-                        </div>
-                        <div class="movie-info">
-                            <div class="movie-name">
-                                <a href="#"><h5>Fast X: Vin Diesel Rủ Dàn Siêu Anh Hùng Đua Xe?</h5></a>
-                            </div>
-                            <div class="movie-detail">
-                                <button type="button" class="btn btn-primary movie-button">👍🏻Thích <label id="count-like">0</label></button>
-                                <label class="movie-views-lbl">Lượt xem: <label id = "count-view">0</label></label>
-                            </div>
-                            <div class = "movie-description">
-                                <p>
-                                    Fast X – phần mở đầu cho “cuộc đua cuối” của đại gia đình Toretto vừa tung ra trailer siêu hấp dẫn vào 10.02 vừa qua.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
+                
             </div>
 
             <div class="col-md-3 right">
@@ -134,48 +89,24 @@
                 <div class="now-showing">
                     <h4>PHIM ĐANG CHIẾU</h4>
                 </div>
+
+                {{#each films}}
                 <div class="row">
                     <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
+                        <a href="#">
+                            <img class="movie-img" src="/img/{{this.poster}}" alt="{{this.tenphim}}">
                             <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
+                                <p><label class="age">C{{dotuoi}}</label></p>
                                 <button class="hidden-buy-ticket-btn">MUA VÉ</button>
                             </div>
                         </a>
                         <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
+                            <h5>{{this.tenphim}}</h5>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md col-sm col-xs right-movie-item">
-                        <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
-                            <img class="movie-img" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
-                            <div class="hidden-buy-ticket">
-                                <p><label class="age">C13</label></p>
-                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
-                            </div>
-                        </a>
-                        <div class="right-movie-name">
-                            <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
-                        </div>
-                    </div>
-                </div>
+                {{/each}}
+
                 <div class="view-more">
                     <button class="view-more-btn">XEM THÊM <label id="right-arrow">→</label></button>
                 </div>
