--- a/src/resource/views/support.hbs
+++ b/src/resource/views/support.hbs
@@ -5,29 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/public/css/ticketprice.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    <link rel="stylesheet" href="/css/support.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title>Hỗ Trợ</title>
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-7 contact">
+        <div class="row cover">
+            <div class="col-md-1"></div>
+            <div class="col-md-7">
                 <!--Section: Contact v.2-->
                 <section class="mb-4">
                     <!--Section heading-->
@@ -127,62 +118,63 @@
                 </section>
                 <!--Section: Contact v.2-->
             </div>
-            <div class="col-lg-5 book-ticket">
-                <div class="title">
-                    <span id="text__buyfast">MUA VÉ NHANH</span>
+
+            <div class="col-md-3 right">
+                <div class="quick-buy-ticket">
+                    <h4>MUA VÉ NHANH</h4>
                 </div>
-                <hr id="line__hor">
-                <div class="select__info__ticket">
-                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                        <option id="select__movie" selected>Chọn phim</option>
-                        <option value="1">Siêu lừa gặp siêu lầy</option>
-                        <option value="2">Tom and Jerry</option>
-                        <option value="3">Adam River</option>
+                <div class="select-all">
+                    <select name="" id="" class="select">
+                        <option value="" disabled selected hidden>Chọn phim</option>
+                        <option value="">Tây du ký</option>
+                        <option value="">Đi tìm nemo</option>
+                        <option value="">Doraemon</option>
                     </select>
-
-                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                        <option id="select__movie" selected>Chọn rạp</option>
-                        <option value="vivoQ7">L2DBT Vivo City Quận 7</option>
+                    <select name="" id="" class="select">
+                        <option value="" disabled selected hidden>Chọn rạp</option>
+                        <option value="">Rạp 1</option>
+                        <option value="">Rạp 2</option>
+                        <option value="">Rạp 3</option>
                     </select>
-
-                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                        <option id="select__movie" selected>Chọn ngày</option>
-                        <option value="113">11/3</option>
-                        <option value="123">12/3</option>
-                        <option value="133">13/4</option>
+                    <select name="" id="" class="select">
+                        <option value="" disabled selected hidden>Chọn ngày</option>
+                        <option value="">13/3/2023</option>
+                        <option value="">14/3/2023</option>
+                        <option value="">15/3/2023</option>
                     </select>
-
-                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                        <option id="select__movie" selected>Chọn suất</option>
-                        <option value="8">8:00</option>
-                        <option value="10">10:00</option>
-                        <option value="12">12:00</option>
-                        <option value="14">14:00</option>
-                        <option value="16">16:00</option>
-                        <option value="18">18:00</option>
-                        <option value="20">20:00</option>
-                        <option value="22">22:00</option>
+                    <select name="" id="" class="select">
+                        <option value="" disabled selected hidden>Chọn suất</option>
+                        <option value="">Suất 1</option>
+                        <option value="">Suất 2</option>
+                        <option value="">Suất 3</option>
                     </select>
-
-                    <button id="btn__buy__ticket" class="btn btn-primary">Mua vé</button>
+                    <div class="buy-ticket-btn">
+                        <button class="buy-ticket">MUA VÉ</button>
+                    </div>
                 </div>
-                <div style="margin-top:100px">
-                    <h3>Phim đang chiếu</h3>
-                    <div style="margin-top: 20px;">
-                        <img src="/assets/images/sieulua.jpeg" alt="">
-                        <label for="">Siêu lừa gặp siêu lầy</label>
-                    </div>
+                <div class="now-showing">
+                    <h4>PHIM ĐANG CHIẾU</h4>
+                </div>
 
-                    <div style="margin-top: 20px;">
-                        <img src="/assets/images/khoachatcua.jpg" alt="">
-                        <label for="">Khóa chặt cửa nào</label>
+                {{#each films}}
+                <div class="row">
+                    <div class="col-md col-sm col-xs right-movie-item">
+                        <a href="#">
+                            <img class="movie-img" src="/img/{{this.poster}}" alt="{{this.tenphim}}">
+                            <div class="hidden-buy-ticket">
+                                <p><label class="age">C{{dotuoi}}</label></p>
+                                <button class="hidden-buy-ticket-btn">MUA VÉ</button>
+                            </div>
+                        </a>
+                        <div class="right-movie-name">
+                            <h5>{{this.tenphim}}</h5>
+                        </div>
                     </div>
+                </div>
+                {{/each}}
 
-                    <div style="margin-top: 20px;">
-                        <img src="/assets/images/cuocchien.jpg" alt="">
-                        <label for="">Cuộc chiến thời tiền sử</label>
-                    </div>
-                    <a href="/phim-dang-chieu" class="btn secondary fl-right">Xem thêm</a>
+                <div class="view-more">
+                    <button class="view-more-btn">XEM THÊM <label id="right-arrow">→</label></button>
                 </div>
             </div>
         </div>
