Done page member, fix some display err UI, put link in navbar

--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -58,8 +58,8 @@
                         PHIM
                     </a>
                     <ul class="dropdown-menu" style="background-color: black;">
-                        <li><a class="dropdown-item menu" style="color: white;" href="phim-dang-chieu">PHIM ĐANG CHIẾU</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="phim-sap-chieu">PHIM SẮP CHIẾU</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/phim-dang-chieu">PHIM ĐANG CHIẾU</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/phim-sap-chieu">PHIM SẮP CHIẾU</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown menu">
@@ -71,28 +71,28 @@
                         <li><a class="dropdown-item menu" style="color: white;" href="#">THỂ LOẠI PHIM</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="#">DIỄN VIÊN</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="#">ĐẠO DIỄN</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="binh-luan-phim">BÌNH LUẬN PHIM</a></li>
-                        <li><a class="dropdown-item menu" style="color: white;" href="blog-dien-anh">BLOG ĐIỆN ẢNH</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/binh-luan-phim">BÌNH LUẬN PHIM</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/blog-dien-anh">BLOG ĐIỆN ẢNH</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown menu">
-                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle=""
+                    <a class="nav-link dropdown-toggle text-white"  role="button" data-bs-toggle=""
                         aria-expanded="false">
                         SỰ KIỆN
                     </a>
                     <ul class="dropdown-menu" style="background-color: black;">
-                        <li><a class="dropdown-item menu" style="color: white;" href="#">ƯU ĐÃI</a></li>
+                        <li><a class="dropdown-item menu" style="color: white;" href="/uu-dai">ƯU ĐÃI</a></li>
                         <li><a class="dropdown-item menu" style="color: white;" href="#">PHIM HAY THÁNG</a></li>
                     </ul>
                 </li>
                 <li class="nav-item menu">
-                    <a class="nav-link active text-white" aria-current="page" href="#">RẠP/GIÁ VÉ</a>
+                    <a class="nav-link active text-white" aria-current="page" href="/gia-ve">RẠP/GIÁ VÉ</a>
                 </li>
                 <li class="nav-item menu">
-                    <a class="nav-link active text-white" aria-current="page" href="#">HỖ TRỢ</a>
+                    <a class="nav-link active text-white" aria-current="page" href="/ho-tro">HỖ TRỢ</a>
                 </li>
                 <li class="nav-item menu">
-                    <a class="nav-link active text-white" aria-current="page" href="#">THÀNH VIÊN</a>
+                    <a class="nav-link active text-white" aria-current="page" href="/chinh-sach">THÀNH VIÊN</a>
                 </li>
             </ul>
         </div>
