--- a/src/public/css/policy.css
+++ b/src/public/css/policy.css
@@ -41,3 +41,33 @@
     height: 200px;
     width: 600px;
 }
+
+/* Mua ve nhanh */
+.mua-ve-nhanh {
+    margin-bottom: 20px;
+}
+
+.mua-ve {
+    width: 100px;
+    padding: 10px;
+    color: white;
+    background-color: #f46c3c;
+    border: 0;
+}
+
+.mua-ve:hover {
+    background-color: #e46434;
+}
+
+.mua-ve-btn{
+    text-align: right;
+    margin-right: 25px;
+    margin-bottom: 30px;
+}
+
+.sl {
+    width: 300px;
+    height: 40px;
+    margin-bottom: 15px;
+}
+/* End mua ve nhanh */
