--- a/src/resource/views/support.hbs
+++ b/src/resource/views/support.hbs
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/support.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/support.css">
     <title>Hỗ Trợ</title>
 </head>
 
@@ -30,7 +29,7 @@
                     <div class="row">
 
                         <!--Grid column-->
-                        <div class="col-md-9 mb-md-0 mb-5">
+                        <div class="col-md-12 mb-md-0 mb-5">
                             <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
                                 <!--Grid row-->
@@ -96,18 +95,18 @@
                         <!--Grid column-->
 
                         <!--Grid column-->
-                        <div class="col-md-3 text-center">
-                            <ul class="list-unstyled mb-0">
-                                <li><i class="fa fa-map-marker "></i>
-                                    <p>90 Nguyễn Thị Thập, Q7, HCMC</p>
+                        <div class="col-md-12 text-center mt-4">
+                            <ul class="list-unstyled mb-0 d-flex justify-content-between">
+                                <li class="d-flex"><i class="fa fa-map-marker" style="margin-top: 4px;"></i>
+                                    <p class="ml-2">90 Nguyễn Thị Thập, Q7, HCMC</p>
                                 </li>
 
-                                <li><i class="fa fa-phone "></i>
-                                    <p>19001222</p>
+                                <li class="d-flex"><i class="fa fa-phone" style="margin-top: 4px;"></i>
+                                    <p class="ml-2">19001222</p>
                                 </li>
 
-                                <li><i class="fa fa-envelope "></i>
-                                    <p>support@ldbt.com</p>
+                                <li class="d-flex"><i class="fa fa-envelope" style="margin-top: 4px;"></i>
+                                    <p class="ml-2">support@ldbt.com</p>
                                 </li>
                             </ul>
                         </div>
