--- a/src/resource/views/movie_blog.hbs
+++ b/src/resource/views/movie_blog.hbs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row cover">
             <div class="col-md-1"></div>
             <div class="col-md-7">
