them chuc nang tim kiem +trang chi tiet phim

--- a/src/resource/views/comming_soon.hbs
+++ b/src/resource/views/comming_soon.hbs
@@ -40,7 +40,9 @@
                                     <img src="./img/{{poster}}" class="movie-image" />
                                     <div class="hidden-content">
                                         <p><label class="movie-c">C{{dotuoi}}</label></p>
-                                        <button class="hidden-button">Mua vé</button>
+                                        <a href="/chi-tiet-phim/{{maphim}}">
+                                            <button class="hidden-button">Mua vé</button>
+                                        </a>
                                     </div>
                                 </div>
                             </a>
