--- a/src/resource/views/search.hbs
+++ b/src/resource/views/search.hbs
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="/css/now_showing.css" />
-    <title>Phim đang chiếu</title>
+    <link rel="stylesheet" href="/css/search.css" />
+    <title>Tìm kiếm</title>
 </head>
 
 <body>
@@ -18,19 +18,9 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-10">
-                <ul class="nav nav-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">
-                            <h5>PHIM ĐANG CHIẾU</h5>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="phim-sap-chieu">
-                            <h5>PHIM SẮP CHIẾU</h5>
-                        </a>
-                    </li>
-                </ul>
-
+                <div class="result">
+                    <p>Có <label>{{count}}</label> kết quả tìm kiếm cho từ khóa: <label>{{key}}</label></p>
+                </div>
                 <div class="movie">
                     <div class="row">
                         {{#each films}}
@@ -53,17 +43,6 @@
                 </div>
 
                 <div class="movie-des">
-                    <div class="cinema-des">
-                        <div class="cinema-name-des">
-                            <h4>LDBT CINEMA</h4>
-                        </div>
-                        <p>Tháng Giêng là tháng ăn chơi, tháng hai cờ bạc, tháng 3 cùng cười haha với Galaxy Cinema với
-                            vô số phim chiếu rạp hài sắp đổ bộ.
-
-                            Đặc biệt, để mang lại niềm vui cho chị em ngày Quốc Tế Phụ Nữ 8-3, cùng dẫn các bà mẹ, chị
-                            em, cũng như người yêu ra rạp thưởng thức những bộ phim điện ảnh hài hước từ trong nước cũng
-                            như quốc tế.</p>
-                    </div><br />
                     {{#each films}}
                     <div class="des">
                         <div class="movie-des">
