Add data for ve, combo, do 40 percents of Buy ticket

--- a/src/resource/views/buy_ticket.hbs
+++ b/src/resource/views/buy_ticket.hbs
@@ -35,8 +35,8 @@
                     <div class="select p-2 mb-5">
                         <div class="mb-3">{{ngaychieu}}</div>
                         <div class="me-3 float-start">2D - Phụ đề</div>
-                        {{#each giochieu}}
-                            <a href="#" class="border p-1">{{this}}</a>
+                        {{#each suatchieu}}
+                            <a href="{{../../choose}}/{{masuatchieu}}" class="border p-1">{{giochieu}}</a>
                         {{/each}}
                     </div>
                 </div>
